[tool.poetry]
name = "flask-backend-hostname"
version = "0.1.0"
description = "Basic example python app returning the host name"
authors = ["Nathan Drew <nath.drew@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
