[tool.poetry]
name = "flask-backend-hostname"
version = "0.1.0"
description = "Basic example python app returning the host name"
authors = ["Nathan Drew <nath.drew@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
gunicorn = "^20.0.4"

[tool.poetry.group.dev.dependencies]
pytest-bdd = "^6.1.1"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pytest = "^7.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
